--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "again": "^0.0.1",
     "next": "14.1.4",
     "next-pwa": "^5.6.0",
     "react": "^18",
