--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "again": "^0.0.1",
+    "@heroicons/react": "^2.1.3",
     "next": "14.1.4",
     "next-pwa": "^5.6.0",
     "react": "^18",
