--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "@mui/material-nextjs": "^5.15.11",
     "again": "^0.0.1",
     "next": "14.1.4",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "recharts": "2.1.9",
     "zod": "^3.23.0"
   },
   "devDependencies": {
