--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,29 +1,29 @@
 ﻿{
-  "theme_color": "#f69435",
-  "background_color": "#f69435",
+  "theme_color": "#a6a6a6",
+  "background_color": "#a6a6a6",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
-  "name": "superbe",
+  "name": "SuperBe",
   "short_name": "s&b",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icons/196.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-256x256.png",
+      "src": "/icons/256.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-384x384.png",
+      "src": "/icons/512.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
