--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "@mui/material-nextjs": "^5.15.11",
+    "@tanstack/react-query": "^5.40.0",
     "again": "^0.0.1",
+    "axios": "^1.7.2",
     "next": "14.1.4",
     "next-pwa": "^5.6.0",
     "react": "^18",
